@@ -19,6 +19,13 @@ GeoTag is available from several sources
   `brew cask install geotag` to install.
 * [GitHub](https://github.com/marchyman/GeoTag)
 
+## WIP
+
+### Bug Fix
+
+* Date/Times could only be modified.  A Date/Time could not be assigned
+  to an image that did not have a create date.  Fixed.
+
 ## GeoTag 4.13
 
 ### Bug Fix
